// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flag renders 1`] = `
<div
  className="lfzUEh"
>
  <div
    className="eFCXZH"
  >
    <div
      className="kZTKNt"
      color="green"
      width="4px"
    />
  </div>
  <div
    className="hSTMkY"
    color="white"
  />
  <div
    className="iehOoF"
    color="green"
    width="18px"
  />
</div>
`;

exports[`Flag renders with hex value as bg color 1`] = `
<div
  className="bDKVpR"
  width={256}
>
  <div
    className="eFCXZH"
  >
    <div
      className="hjJwqG"
      color="#085397"
      width="4px"
    />
  </div>
  <div
    className="bepOJS"
    color="white"
  />
  <div
    className="cGpsmt"
    color="#085397"
    width="18px"
  />
</div>
`;

exports[`Flag renders with theme color as bg color 1`] = `
<div
  className="dNlSoc"
>
  <div
    className="bDKVpR"
    width={256}
  >
    <div
      className="eFCXZH"
    >
      <div
        className="AXboY"
        color="purple"
        width="4px"
      />
    </div>
    <div
      className="OApIG"
      color="white"
    />
    <div
      className="bJYICr"
      color="purple"
      width="18px"
    />
  </div>
</div>
`;

exports[`Flag renders with width prop 1`] = `
<div
  className="bDKVpR"
  width={256}
>
  <div
    className="eFCXZH"
  >
    <div
      className="kZTKNt"
      color="green"
      width="4px"
    />
  </div>
  <div
    className="gZotcV"
    color="white"
  />
  <div
    className="iehOoF"
    color="green"
    width="18px"
  />
</div>
`;
